# Docking_guerledan

./: .gitignore  PLAN_IMPLEMENTATION.md  QUICKSTART.md  README.md  mock_pipeline.sh
.github/prompts/: plan-workspaceRos2Modulaire.prompt.md
Divers/test_accoustic_cage_guerledan/: readme.md
Lancement_node_oculus/: default.launch.py  display.rviz
Noeuds/: README.md
Noeuds/bluerov_control0/: package.xml
Noeuds/bluerov_control0/bluerov_control0/: utils_0.py  utils_0_mapped.py  utils_0_test.py  utils_pid.py
Noeuds/bluerov_ihm0/bluerov_ihm0/: ihm.py
Noeuds/bluerov_launch0/: setup.cfg
Simulation/: bluerov_dynamic.py  control_mcp_test.py
bluerov_control0/: setup.cfg
bluerov_control0/bluerov_control0/: utils_0.py
bluerov_ihm0/: package.xml  setup.cfg
bluerov_launch0/: package.xml
bluerov_launch0/config/: parametre_inky.yaml
bluerov_sim/: package.xml  setup.cfg  setup.py
bluerov_sim/bluerov_sim/: __init__.py  controller_node.py  plot_trajectory.py  simulator_node.py
bluerov_tracking0/: package.xml  setup.cfg  setup.py
bluerov_tracking0/bluerov_tracking0/: tracking_node_vs0.py
divers/archive_code/: oculus_sonar_test_v2.py
divers/test_accoustic_cage_guerledan/: read_nc.py
docs/Rapport_Docking/: main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc
docs/Rapport_Docking/rapport/: I-theorie.tex  II-materiel.tex  abstract.tex  annexe.tex  conclusion.tex  introduction.tex  references.bib
oculus_sonar_ros2/: CMakeLists.txt  package.xml
ros2_bluerov/: README.md  README_IMPLEMENTATION.md  README_WORKSPACE.md  plan.md  requirements.txt
ros2_bluerov/cage_complete-20260119T132119Z-3-001/cage_complete/: metadata.yaml
ros2_bluerov/cage_complete2-20260119T133630Z-3-001/cage_complete2/: metadata.yaml
ros2_bluerov/guerledan_02-02-lent/: metadata.yaml
ros2_bluerov/guerledan_02-02-proche/: metadata.yaml
ros2_bluerov/guerledan_02-02-rapide/: metadata.yaml
ros2_bluerov/guerledan_02-02-sans-pvc/: metadata.yaml
ros2_bluerov/src/affichage/: README.md  package.xml  setup.cfg  setup.py
ros2_bluerov/src/bringup/: CMakeLists.txt  README.md  package.xml
ros2_bluerov/src/bringup/config/: default.yaml
ros2_bluerov/src/bringup/launch/: complete_pipeline.launch.py  detection_pipeline.launch.py  mock_pipeline.launch.py  replay_mission.launch.py  rosbag_pipeline.launch.py  sonar_only.launch.py  sonar_pipeline.launch.py  user_pipeline.launch.py
ros2_bluerov/src/docking_msgs/: CMakeLists.txt  README.md  package.xml
ros2_bluerov/src/docking_msgs/msg/: BBoxSelection.msg  Borders.msg  ClickPosition.msg  DetectedLines.msg  Frame.msg  FrameCartesian.msg  PoseRelative.msg  RotatedBBoxInit.msg  State.msg  TrackedObject.msg
ros2_bluerov/src/docking_msgs/srv/: ConfigureSonar.srv
simulation/: README.md  bluerov_simulation.py  plot_bluerov.py  test_cage_follow_controller.py  test_single_point_controller.py
tools/: benchmark_sonar_mock.py
(+104 files in other folders)
