<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>Launch files et orchestration pour le système de docking</description>
  <maintainer email="maxime.lefevre@example.com">Maxime Lefevre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>sonar</exec_depend>
  <exec_depend>traitement</exec_depend>
  <exec_depend>tracking</exec_depend>
  <exec_depend>localisation</exec_depend>
  <exec_depend>control</exec_depend>
  <exec_depend>mission</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
